--- a/.github/workflows/writeapaper.yml
+++ b/.github/workflows/writeapaper.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       # Edit here with the names of your latex file and directory (can use ".")
-      DIR: draft/SU3_Latent_Heat
+      DIR: draft/SU3_Latent_Heat/
       FILE: latent_heat
     steps:
       - name: Checkout
